<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >



    <TextView
        android:id="@+id/shairvia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:background="@drawable/toucheffecta"
        android:text="@string/share_this_post"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
        app:drawableLeftCompat="@drawable/shair2" />


    <TextView
        android:id="@+id/removethispost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:background="@drawable/toucheffecta"
android:visibility="gone"
        android:text="@string/remove_this_post"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shairvia"
        app:drawableLeftCompat="@drawable/remove" />

    <TextView
        android:id="@+id/deletepost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="8dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:background="@drawable/toucheffecta"
        android:padding="5dp"
        android:text="@string/delete_post"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removethispost"
        app:drawableLeftCompat="@drawable/delete"
        />

    <TextView
        android:id="@+id/addinspace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:background="@drawable/toucheffecta"

        android:text="@string/add_user_in_your_space"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deletepost"
        app:drawableLeftCompat="@drawable/space" />

    <TextView
        android:id="@+id/blockuser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/toucheffecta"

        android:text="@string/block_user"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addinspace"
        app:drawableLeftCompat="@drawable/block" />

    <TextView
        android:textSize="16sp"
        android:id="@+id/unfollow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/unfollow"
        android:background="@drawable/toucheffecta"

        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blockuser"
        app:drawableLeftCompat="@drawable/unfollow" />

    <TextView
        android:textSize="16sp"
        android:id="@+id/report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:drawableLeftCompat="@drawable/report"
        android:text="@string/report_post"
        android:background="@drawable/toucheffecta"

        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unfollow"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

