<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Bottom_sheets.Report_Bottomsheet">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="Report"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dontlikeit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:background="@drawable/toucheffecta"

        android:text="@string/i_am_not_interested"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a" />


    <TextView
        android:id="@+id/scamorfrod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:background="@drawable/toucheffecta"

        android:text="@string/scam_or_fraud"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dontlikeit" />

    <TextView
        android:id="@+id/falseinfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:background="@drawable/toucheffecta"

        android:text="@string/wrong_information"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scamorfrod"

        />

    <TextView
        android:id="@+id/voilance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:text="@string/violence"
        android:background="@drawable/toucheffecta"

        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/falseinfo" />

    <TextView
        android:id="@+id/sexual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:text="@string/nudity_or_sexual_content"
        android:background="@drawable/toucheffecta"

        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voilance" />

    <TextView
        android:id="@+id/hatespeech"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:text="@string/hate_speech"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:background="@drawable/toucheffecta"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/sexual" />


</androidx.constraintlayout.widget.ConstraintLayout>