<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/sign_up"
        android:textColor="@color/dark"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/namelayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_textbg"
      android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:background="@android:color/transparent"
            android:hint="@string/namecreateaccount"
            android:paddingBottom="5dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailaddresslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_textbg"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namelayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailedittext"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/emailcreateaccount"
            android:paddingBottom="5dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_textbg"
       android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailaddresslayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:paddingBottom="5dp"
            android:fontFamily="@font/roboto"
             />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signupbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/input_textbg"
        android:backgroundTint="@color/maincolor"
        android:fontFamily="@font/roboto"
        android:text="Sign Up"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/termsandconditions"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/termsandconditions"
        app:layout_constraintTop_toBottomOf="@+id/termsandconditions" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/signupbutton"
        app:layout_constraintStart_toStartOf="@+id/signupbutton"
        app:layout_constraintTop_toBottomOf="@+id/signupbutton" />

    <Button
        android:id="@+id/countinuewithgoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/searchbg"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="50dp"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/signupbutton"
        app:layout_constraintStart_toStartOf="@+id/signupbutton"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/already_have_an_account"
        android:textColor="#000000"
        android:fontFamily="@font/roboto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/logintext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/login_here"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/termsandconditions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/user_text_agreement"
        android:textAlignment="center"
        android:fontFamily="@font/roboto"
        android:textColor="@color/NEAVYBLUE"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/signupbutton"
        app:layout_constraintEnd_toEndOf="@+id/passwordlayout"
        app:layout_constraintStart_toStartOf="@+id/passwordlayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordlayout" />

    <ProgressBar
        android:id="@+id/lodingbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/maincolor"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>