<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ForgotPassword">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
       android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/we_will_send_link_for_forgot_password_on_this_email_address"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fgemailaddresslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_textbg"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fgemailedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:background="@android:color/transparent"
            android:hint="@string/emailcreateaccount"
            android:paddingBottom="5dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/sendlink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:background="@drawable/input_textbg"
        android:backgroundTint="@color/maincolor"
        android:fontFamily="@font/roboto"
        android:text="@string/send_link"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/fgemailaddresslayout"
        app:layout_constraintStart_toStartOf="@+id/fgemailaddresslayout"
        app:layout_constraintTop_toBottomOf="@+id/fgemailaddresslayout" />

</androidx.constraintlayout.widget.ConstraintLayout>